adjusted avatars to fit avatars div and avoid overflow and scroll bar

--- a/src/style.css
+++ b/src/style.css
@@ -93,11 +93,12 @@ body {
 
 #game-area {
   width: 100%;
-  height: 90%;
+  height: 100%;
+  padding: 5vh 1rem;
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -451,20 +452,23 @@ padding: 4%;
 /* -----------------------  AVATARS -----------------------*/
 
 #avatars {
+  border: 1px solid red;
   width: 90%;
   height: 20vh;
-  margin: 15vh;
+  margin-bottom: 5vh;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
 #python {
+  max-width: 40%;
   transform: scaleX(-1);
   z-index: 1;
 }
 
 #player {
+  max-width: 40%;
   position: relative;
 }
 
